@@ -45,6 +45,8 @@ Trunk (unreleased changes)
   OPTIMIZATIONS
 
   BUG FIXES
+  HCAT-423 HCatalog should include SerDe-reported fields in the table schema (traviscrawford via khorgath)
+
   HCAT-362 add --local-infile to the mysql command (arpitgupta via daijy)
 
   HCAT-417 List Ant 1.8 in install pre-reqs (jghoman via daijy)
